# Selkie

./: CMakeLists.txt  compile_shaders.bat  compile_shaders.sh  main.cpp  math.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
shaders/: constants.glsl  ground.rahit  ground.rchit  ground.rint  main.rgen  main.rmiss  main_payload.glsl  nothing.rint  raymarch.glsl  reflection.rmiss  remember.rahit  sdfs.glsl  shadow.rahit  shadow.rmiss  shadow_payload.glsl  sphere.rahit  sphere.rchit  sphere.rint  tmp.rchit  tmp.rgen  tmp.rint  tmp.rmiss
